test/cli/test/any-namespaceSelector/kyverno-test.yaml
name: enforce-pod-name
policies:
- policy.yaml
resources:
- resource.yaml
results:
- kind: Pod
  namespace: test1
  policy: enforce-pod-name
  resources:
  - test-nginx
  result: pass
  rule: validate-name
variables: value.yaml
