test/cli/test/any-namespaceSelector/policy.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-pod-name
spec:
  admission: true
  background: true
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Pod
          namespaceSelector:
            matchExpressions:
            - key: foo.com/managed-state
              operator: In
              values:
              - managed
    name: validate-name
    validate:
      failureAction: Audit
      message: The Pod must end with -nginx
      pattern:
        metadata:
          name: '*-nginx'
