test/cli/test/any-namespaceSelector/value.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
namespaceSelector:
- labels:
    foo.com/managed-state: managed
  name: test1
